chore(repo): finalize M0-M5 baseline